# 2d-hsm

./: .gitignore  .gitmodules  .roborev.toml  AGENTS.md  README.md  logic_diff.diff
.github/workflows/: nix-hsm.yml
backlog/: config.yml
backlog/docs/: agent-gateway-anti-rollback.md  agent-gateway-host-integration-contract.md  agent-gateway-keygen-identity.md  agent-gateway-keystore-backup-format.md  agent-gateway-provisioning-channel.md  agent-gateway-provisioning-wire-format.md  agent-gateway-secp256k1-signer-design.md  agent-gateway-transfer-faucet-signing.md  authorization-tickets-precompile-spec-draft.md  authorization-tickets-wire-format-and-precompile-skeleton.md  implementation-plan-vsock-api-and-hard-fork.md  operational-runbook.md  permissionless-blockproducer-recovery-tickets.md  pq-seal-v1-provisioning-runbook.md  security-review-enclave-protocol-crate.md  snp-attestation-verifier-policy.md  vsock-api-wire-format-spec-draft.md
backlog/tasks/: task-1 - Implement-custom-minimal-post-quantum-signing-service-inside-TEE.md  task-1.1 - Platform-derived-PQ-seal-attestation-trust-root-vTPM-SNP-VMPL-Nitro.md  task-1.2 - Complete-SNP-attestation-verification-VCEK-ASK-ARK-chain-image-binding.md  task-1.3 - Integrate-with-2d-signing-path-NetHSM-inventory-Chain.Bridge.Signer-OPA-Vault.md  task-1.4 - On-chain-RecoveryTicket-precompile-MeasurementRegistry-2d-solidity.md  task-1.5 - Reader-light-client-block-verification-authorized-producer-state-transitions.md  task-1.6 - Operational-runbook-2-instance-failover-demo.md  task-1.7 - Security-review-of-enclave-protocol-crate.md  task-10 - Staging-UDS-transport-release-guard-CI-artifact-gate-roborev-audit-2026-06-07.md  task-11 - Doc-spec-precision-wire-feature-cleanups-roborev-audit-2026-06-07.md  task-12 - Agent-Gateway-secp256k1-primitives-module-TASK-7.6.1.md  task-13 - Agent-Gateway-sealed-keystore-backup-export-impl-TASK-7.6.2.md  task-14 - Agent-Gateway-keygen-identity-opcodes-0x40-dispatch-TASK-7.6.3.md  task-15 - Agent-Gateway-transfer-faucet-signing-caps-impl-TASK-7.6.4.md  task-16 - Agent-Gateway-host-integration-production-funding-gate-TASK-7.6.5.md  task-17 - Keystore-residual-hardening-doc-accuracy-roborev-audit-2026-06-08.md  task-18 - GENERATE_KEYS-exec-un-gate-prerequisites-scope-binding-audit-anti-rollback.md  task-19 - Fix-forge-cross-check-test-race-process-unique-exchange-filenames.md  task-2 - Design-and-implement-vsock-API-wire-protocol-for-TEE-signing-service-Authorization-Tickets-Hard-Fork-flows.md  task-20 - roborev-residual-findings-from-TASK-7.7-d-ii-slices-—-doc-wording-test-code-hardening.md  task-21 - relay-superset-anchor-acceptance-differential-test-host-anchor-relay.md  task-22 - Publish-byte-exact-0x40-golden-vectors-request-envelope-§10.5-capability-preimage-response-bodies.md  task-23 - Ship-a-deviceless-agent-gateway-0x40-contract-test-server-UDS-stdio-with-install_reference_agent_keystore.md  task-24 - RESTORE_BACKUP8-recovery-ceremony-handler-attested-confidential-ingress-AC11-12-counter-seeding.md  task-25 - Production-agent-gateway-release-image-attested-keystore-install-channel-TEE-RNG-scope-id-provenance-G3.md  task-26 - Production-restore-drill-evidence-handoff-for-Agent-Gateway-funding-gate-provenance-cross-repo-bridge-to-2D-TASK-132.5.3.md  task-27 - RESTORE_BACKUP-un-gate-blocker-—-route-GET_RESTORE_PUBKEY-quote-fetch-through-the-bounded-subprocess.md  task-28 - RESTORE_BACKUP-response-must-emit-restored-identity-set-request_id-echo-cross-repo-gap-TASK-24↔TASK-26.md  task-29 - Fix-M-3-update-stale-Cargo.toml-doc-comments-for-all-agent-preview-features-TASK-1.7-security-audit.md  task-4 - NixOS-reproducible-TEE-image-primary-delivery-path.md  (+17 more)
docs/: pr-5-body.md  restore-drill-evidence-handoff-contract.md
impl/: README.md
impl/rust/enclave-protocol/: Cargo.toml  build.rs
impl/rust/enclave-protocol/examples/: bench_mldsa65.rs  dump_reference_attestation_vk.rs  dump_snp_measurement.rs  framing_demo.rs  gen_golden_vectors.rs  gen_producer_vectors.rs  generate_lab_prod_sealed.rs  ticket_signing_demo.rs
impl/rust/enclave-protocol/src/: agent_anchor.rs  agent_backup.rs  agent_boot.rs  agent_boot_driver.rs  agent_boot_relay.rs  agent_capability.rs  agent_cbor.rs  agent_challenge.rs  agent_dispatch.rs  agent_gateway_boot.rs  agent_identity.rs  agent_keygen.rs  agent_keystore.rs  agent_provision.rs  agent_transfer.rs  boot_agent_keystore.rs  boot_input.rs  boot_lab_pq_seal.rs  cancellable_boundary.rs  chain_proof_crypto.rs  contract_server.rs  enclave_serve.rs  env_config.rs  host_anchor_relay.rs  host_test_fixtures.rs  lab_agent_smoke.rs  lib.rs  mldsa65.rs  platform_provisioning_boot.rs  pq_signer.rs  provision_bootstrap.rs  quote_smoke.rs  quote_subprocess.rs  reference_keystore.rs  rlp.rs  seal_root.rs  secp256k1.rs  snp_report.rs  snp_verify.rs  u256.rs  (+4 more)
impl/rust/enclave-protocol/tests/: agent_keystore_boot_loader.rs  host_anchor_relay_bin.rs  producer_vectors.rs  twod_hsm_agent_contract_server_seal.rs  twod_hsm_agent_gateway_bin.rs  twod_hsm_quote_smoke_bin.rs
impl/rust/enclave-protocol/testvectors/: lab_prod_enclave.sealed
impl/rust/enclave-protocol/testvectors/agent-gateway/: README.md  agent_backup_v1.json  agent_keystore_genesis_v2.json  agent_keystore_smoke_v1.json  boot_relay_anchor_handshake_v1.json  cap_envelopes_v1.json  capability_vectors_v1.json  domain_separation.json  gen_agent_vectors.exs  identity_proof_v1.json  keys.json  negative_vectors_v1.json  ordinary_tx_v1.json  request_envelopes_v1.json  response_bodies_v1.json  restore_ingress_envelope_v1.json  restore_ingress_v1.json  tron_transfer_v1.json
impl/rust/enclave-protocol/testvectors/producer/: README.md  manifest.json
impl/rust/pq-seal-manifest/: Cargo.toml  README.md
impl/rust/pq-seal-manifest/src/: lib.rs
impl/rust/pq-seal-v1/: Cargo.toml  README.md
impl/rust/pq-seal-v1/src/: main.rs
impl/rust/snp-attest-verify/: Cargo.toml  README.md
impl/rust/snp-attest-verify/src/: lib.rs  main.rs
impl/rust/snp-derive-root/: Cargo.toml  README.md
impl/rust/snp-derive-root/src/: lib.rs  main.rs
(+60 files in other folders)
