[package]
name = "enclave-protocol"
version = "0.1.0"
edition = "2021"
description = "Canonical vsock wire protocol between 2D host and TEE signing service (high-risk component)"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
ciborium = "0.2"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.12.0"
thiserror = "1.0"
ed25519-dalek = "2"
pqcrypto-mldsa = { version = "0.1.2", optional = true }
pqcrypto-traits = { version = "0.3.5", optional = true }

[dev-dependencies]
hex = "0.4"
tempfile = "3.10"
serde_json = "1.0"
# For future property testing of canonical encoding

[features]
default = ["ml-dsa-65"]
# Real ML-DSA-65 signing (FIPS 204, pqcrypto-mldsa / PQClean).
# Production TEE target: mldsa-native-rs once stable; reference crate uses fixed test-vector key.
ml-dsa-65 = ["dep:pqcrypto-mldsa", "dep:pqcrypto-traits"]
# Mock 64-byte PQ signatures for examples and local dev only (see vsock spec §2.1).
test-support = []
enforce-forge-crosscheck = []
#   When enabled, the automated cross-check tests (that verify
#   `compute_canonical_ticket_hash` against the Solidity `abi.encode` + keccak256
#   via `CanonicalTicketHash.s.sol`) will HARD-FAIL instead of gracefully skipping
#   if forge or the script is unavailable.
#
#   Intended for CI gates:
#     cargo test --features enforce-forge-crosscheck
#
#   By default (without the feature) the tests remain CI-friendly and skip with
#   a loud warning. This preserves the "live contract" verification without
#   breaking developer machines that lack Foundry.
#
# Add "std" if we need std in the future (enclave may be no_std later)

[[example]]
name = "ticket_signing_demo"
required-features = ["test-support"]
