[package]
name = "enclave-protocol"
version = "0.1.0"
edition = "2021"
description = "Canonical vsock wire protocol between 2D host and TEE signing service (high-risk component)"
license = "MIT OR Apache-2.0"
publish = false
build = "build.rs"

[dependencies]
ciborium = "0.2"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.12.0"
thiserror = "1.0"
ed25519-dalek = "2"
pqcrypto-mldsa = { version = "0.1.2", optional = true }
pqcrypto-traits = { version = "0.3.5", optional = true }
zeroize = { version = "1.8", features = ["serde"], optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
getrandom = { version = "0.2", optional = true }
hex = { version = "0.4", optional = true }
# Agent Gateway secp256k1 signer (TASK-7.6). Pure-Rust RustCrypto stack, no_std-capable,
# forbid(unsafe_code)-friendly. RFC6979 deterministic + low-S + recoverable ECDSA.
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"], optional = true }
bs58 = { version = "0.5", optional = true }
sha2 = { version = "0.10", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
vsock = { version = "0.5", optional = true }

[dev-dependencies]
hex = "0.4"
tempfile = "3.10"
serde_json = "1.0"
# For future property testing of canonical encoding

[features]
default = []
# Agent Gateway secp256k1 signer backend (TASK-7.6). Reuses the already-optional zeroize/getrandom
# (otherwise only pulled by ml-dsa-65) for the CSPRNG keygen; does not embed any key by itself.
agent-gateway = ["dep:k256", "dep:bs58", "dep:sha2", "dep:zeroize", "dep:getrandom", "dep:chacha20poly1305"]
# Enables AGENT_K1_PROVE_IDENTITY signing. **Production-gated OFF** until the 2D side pins the
# EIP-2718 transaction-type 0x19 reservation in a MERGED commit (2D PR #144 / TASK-132.5) — until
# then identity-proof signing is non-collision-unproven against typed txs (vsock spec §10.8). With
# `agent-gateway` but WITHOUT this, PROVE_IDENTITY fails closed (AGENT_NOT_CONFIGURED). Never enable
# in a production build before that reservation merges; production fund custody is TASK-7.7-gated too.
agent-prove-identity-preview = ["agent-gateway"]
# Reference relying-party SNP attestation verifier (TASK-1 AC#3/#12). NOT part of the enclave
# signing path — off by default so it is not compiled into the production enclave binary.
snp-verify = []
# ML-DSA-65 crypto (sealed-key provisioning). Does not embed a secret key by itself.
ml-dsa-65 = [
    "dep:pqcrypto-mldsa",
    "dep:pqcrypto-traits",
    "dep:zeroize",
    "dep:chacha20poly1305",
    "dep:getrandom",
]
# Offline seal CLI / provisioning workstation only — not for enclave deploy builds.
pq-seal-provisioning = ["ml-dsa-65"]
# Staging/CI: reference v1 seal root (not for production deployment).
reference-seal-v1-root = ["ml-dsa-65"]
# Lab/integration: load 32-byte root from `TWOD_HSM_PQ_SEAL_V1_ROOT_FILE` at boot (debug builds only).
platform-provisioning-from-file = ["ml-dsa-65"]
# Lab prod guest: install sealed blob from `TWOD_HSM_PQ_SEALED_SIGNER_FILE` after platform root (debug only).
lab-pq-seal-from-file = ["ml-dsa-65"]
# Public NIST test-vector keypair — `cargo test` only (see vsock spec §2.1).
reference-test-key = ["ml-dsa-65", "reference-seal-v1-root", "pq-seal-provisioning"]
# Mock 64-byte PQ + reference Ed25519 attestation keys for local dev (see vsock spec §2.1).
# Mutually exclusive with ml-dsa-65 (compile_error in lib.rs).
test-support = ["dep:hex"]
# Staging/CI enclave profile: real ML-DSA-65 + reference seal (mutually exclusive with test-support via ml-dsa-65).
staging-host = [
    "ml-dsa-65",
    "pq-seal-provisioning",
    "reference-seal-v1-root",
    "reference-test-key",
    "dep:hex",
]
# Enables mock PQ signing in the ticket_signing_demo example only (pq_signing_ready stays false).
demo-mock-sign = ["test-support"]
# AF_VSOCK transport (Linux). Staging binary pairs with staging-host.
vsock-transport = ["dep:vsock"]
staging-vsock = ["staging-host", "vsock-transport"]
# Production AF_VSOCK server (release only; no reference seal / staging keys).
production-vsock = ["ml-dsa-65", "vsock-transport"]
# Lab prod guest (debug build): file-based platform root + sealed signer install.
lab-production-vsock = [
    "production-vsock",
    "platform-provisioning-from-file",
    "lab-pq-seal-from-file",
]
enforce-forge-crosscheck = []
#   When enabled, the automated cross-check tests (that verify
#   `compute_canonical_ticket_hash` against the Solidity `abi.encode` + keccak256
#   via `CanonicalTicketHash.s.sol`) will HARD-FAIL instead of gracefully skipping
#   if forge or the script is unavailable.
#
#   Intended for CI gates:
#     cargo test --features enforce-forge-crosscheck
#
#   By default (without the feature) the tests remain CI-friendly and skip with
#   a loud warning. This preserves the "live contract" verification without
#   breaking developer machines that lack Foundry.
#
# Add "std" if we need std in the future (enclave may be no_std later)

[[bin]]
name = "enclave-stdio-bridge"
path = "src/bin/enclave_stdio_bridge.rs"

[[bin]]
name = "enclave-stdio-session"
path = "src/bin/enclave_stdio_session.rs"
required-features = ["test-support"]

[[bin]]
name = "enclave-uds-server"
path = "src/bin/enclave_uds_server.rs"
required-features = ["test-support"]

[[bin]]
name = "enclave-uds-staging"
path = "src/bin/enclave_uds_staging.rs"
required-features = ["staging-host"]

[[bin]]
name = "enclave-vsock-staging"
path = "src/bin/enclave_vsock_staging.rs"
required-features = ["staging-vsock"]

[[bin]]
name = "enclave-vsock"
path = "src/bin/enclave_vsock.rs"
required-features = ["production-vsock"]

# lab-production-vsock satisfies production-vsock via feature unification when both enabled

[[example]]
name = "ticket_signing_demo"
required-features = ["test-support", "demo-mock-sign"]

[[example]]
name = "generate_lab_prod_sealed"
required-features = ["pq-seal-provisioning", "ml-dsa-65"]

[[example]]
name = "dump_reference_attestation_vk"
required-features = ["test-support"]

[[example]]
name = "bench_mldsa65"
required-features = ["ml-dsa-65", "pq-seal-provisioning"]
