[package]
name = "enclave-protocol"
version = "0.1.0"
edition = "2021"
description = "Canonical vsock wire protocol between 2D host and TEE signing service (high-risk component)"
license = "MIT OR Apache-2.0"
publish = false
build = "build.rs"

[dependencies]
ciborium = "0.2"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.12.0"
thiserror = "1.0"
ed25519-dalek = "2"
# Constant-time equality for the fund-custody digest gate (`execute_adopt_forward`). Already in the
# build graph (transitively via ed25519-dalek); declared directly because we now use it by name.
subtle = "2"
pqcrypto-mldsa = { version = "0.1.2", optional = true }
pqcrypto-traits = { version = "0.3.5", optional = true }
zeroize = { version = "1.8", features = ["serde"], optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
getrandom = { version = "0.2", optional = true }
hex = { version = "0.4", optional = true }
# ML-KEM-1024 (FIPS 203) for the pq-agent-backup-v1 DR-backup KEM-DEM envelope (TASK-13b). Pure-Rust
# RustCrypto, forbid(unsafe_code)-clean, with deterministic encapsulation for byte-exact golden vectors.
# INDEPENDENT crate — NOT pqcrypto-mldsa and NOT gated by ml-dsa-65, so it stays on the agent side of the
# `ml-dsa-65 ⊥ agent-gateway` role-isolation XOR (lib.rs). Optional; only the backup-export preview pulls it.
# `hazmat` exposes `encapsulate_deterministic` (we draw the 32-byte message `m` via the TEE CSPRNG
# (getrandom) and pass it explicitly — identical to the crate's own `encapsulate_with_rng`, but it lets us
# pin a fixed `m` for byte-exact golden vectors; the enclave draws randomness via getrandom, not rand_core).
# `zeroize` scrubs the crate's internal ML-KEM key material.
ml-kem = { version = "0.3", optional = true, features = ["hazmat", "zeroize"] }
# Agent Gateway secp256k1 signer (TASK-7.6). Pure-Rust RustCrypto stack, no_std-capable,
# forbid(unsafe_code)-friendly. RFC6979 deterministic + low-S + recoverable ECDSA.
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"], optional = true }
bs58 = { version = "0.5", optional = true }
sha2 = { version = "0.10", optional = true }
x509-cert = { version = "0.2.5", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
vsock = { version = "0.5", optional = true }
# `poll` for the cancellable-boundary primitive (deadline-bounded fd wait), `socket` for the (a') hard
# connect bound (non-blocking vsock SOCK_STREAM via socket/connect/getsockopt(SO_ERROR)/VsockAddr), and
# `fs` for `nix::fcntl` (BOTH `fcntl()`/`FcntlArg` and `OFlag` live inside nix's `feature!{fs}` block —
# fcntl.rs:726 — so the whole F_GETFL readback needs `fs`), used by the aya acceptance test that asserts
# the connect fd is restored to BLOCKING mode (F_GETFL/O_NONBLOCK readback) alongside the SO_*TIMEO values
# via safe getsockopt — all SAFE nix wrappers (under #![forbid(unsafe_code)]). We declare the features
# directly rather than relying on vsock's transitive nix enablement: vsock does not enable `poll`/`fs` at
# all, and even where it may pull `socket` we pin it
# explicitly so a future vsock bump that drops/changes its nix features can't silently break our build
# (don't "clean up" as redundant). Direct dep is target-gated + optional. Version matches the
# already-locked nix 0.31.3.
nix = { version = "0.31", default-features = false, features = ["poll", "socket", "fs"], optional = true }

[dev-dependencies]
hex = "0.4"
tempfile = "3.10"
serde_json = "1.0"
# For future property testing of canonical encoding

[features]
default = []
# Agent Gateway secp256k1 signer backend (TASK-7.6). Reuses the already-optional zeroize/getrandom
# (otherwise only pulled by ml-dsa-65) for the CSPRNG keygen; does not embed any key by itself.
agent-gateway = ["dep:k256", "dep:bs58", "dep:sha2", "dep:zeroize", "dep:getrandom", "dep:chacha20poly1305", "dep:x509-cert"]
# Enables AGENT_K1_PROVE_IDENTITY signing. **Production-gated OFF** until the 2D side pins the
# EIP-2718 transaction-type 0x19 reservation in a MERGED commit (2D PR #144 / TASK-132.5) — until
# then identity-proof signing is non-collision-unproven against typed txs (vsock spec §10.8). With
# `agent-gateway` but WITHOUT this, PROVE_IDENTITY fails closed (AGENT_NOT_CONFIGURED). Never enable
# in a production build before that reservation merges; production fund custody is TASK-7.7-gated too.
agent-prove-identity-preview = ["agent-gateway"]
# Enables LIVE AGENT_K1_GENERATE_KEYS execution (key minting + counter advance + re-seal/swap).
# **Production-gated OFF**: a live, host-rollback-replayable key-minting mutation is unsafe until the
# TASK-7.7 anti-rollback binding, scope_target↔sealed-enclave-id binding, and the AC#14 audit record
# land. Without this feature GENERATE_KEYS verifies the capability then fails closed
# (AGENT_NOT_CONFIGURED). Banned in release builds (see lib.rs). Never enable in production.
agent-keygen-exec-preview = ["agent-gateway"]
# Enables LIVE AGENT_K1_SIGN_TRANSFER execution (structured EIP-155 ordinary-transfer signing with an
# `agent_transfer_k1` key). **Production-gated OFF** as a fund-CUSTODY-readiness gate: SIGN_TRANSFER
# mutates no sealed state (it is NOT rollback-sensitive, so it carries no TASK-7.7 anti-rollback
# obligation), but it emits fund-moving signatures, so it stays fail-closed in production until the
# AC#5 production funding profile is provisioned (TASK-15) and TASK-18 un-gates. Without this feature
# SIGN_TRANSFER fails closed (AGENT_NOT_CONFIGURED). Banned in release builds (see lib.rs). Never enable
# in production.
agent-sign-transfer-preview = ["agent-gateway"]
# Enables LIVE AGENT_K1_SIGN_FAUCET_DISPENSE execution (treasury→known-transfer-key native dispense with
# the §2 spend caps + atomic dual-counter debit through the seal-before-emit seam). **Production-gated
# OFF**: on top of the AC#5 fund-CUSTODY-readiness gate it is ROLLBACK-SENSITIVE (it debits sealed faucet
# spend counters), so it ALSO carries the TASK-7.7 anti-rollback obligation — the runtime dispatch gate
# already fails it closed (AGENT_NOT_CONFIGURED) when the anti-rollback binding is unconfigured. Without
# this feature SIGN_FAUCET_DISPENSE fails closed (AGENT_NOT_CONFIGURED). Banned in release builds (see
# lib.rs). Never enable in production.
agent-sign-faucet-preview = ["agent-gateway"]
# Enables LIVE AGENT_K1_CONFIGURE_TREASURY execution (the faucet treasury config mutators —
# `set_limits` / `refill_budget` / `raise_lifetime_breaker` (admin) + `reset_lifetime_breaker`
# (recovery) — committed through the seal-before-emit seam, slice 15-4). **Production-gated OFF**: it is
# ROLLBACK-SENSITIVE (mutates sealed faucet config / spend / breaker + the monotonic
# `config_version`), so the runtime dispatch gate ALSO fails it closed (AGENT_NOT_CONFIGURED) when the
# anti-rollback binding is unconfigured. Without this feature CONFIGURE_TREASURY verifies the capability
# then fails closed (AGENT_NOT_CONFIGURED). Banned in release builds (see lib.rs): stays fail-closed
# until the AC#5 production funding profile is armed, the independent recovery-counter rule + the AC#14
# audit record land, and TASK-18 un-gates. Never enable in production.
agent-configure-treasury-preview = ["agent-gateway"]
# TASK-13b: EXPORT_BACKUP(7) / RESTORE_BACKUP(8) DR-backup path. EXPORT produces the `pq-agent-backup-v1`
# blob — the ML-KEM-1024 KEM-DEM envelope wrapped to the operator's OFFLINE recovery public key (domain
# `2d-hsm-agent-backup-v1-key`). RESTORE is a SEPARATE construction: the recovery ceremony re-encrypts to
# the destination TEE's attested EPHEMERAL key via the distinct `2d-hsm-agent-restore-ingress-v1` ingress
# envelope (NOT this blob) — Slice 1 ships only the export primitive; RESTORE stays a fail-closed reserved
# stub. Pulls the pure-Rust `ml-kem` crate (NOT pqcrypto/ml-dsa-65 — independent, so role isolation holds).
# Without this feature EXPORT/RESTORE verify the capability then fail closed (AGENT_NOT_CONFIGURED). Banned
# in release builds (see lib.rs): stays fail-closed until the anti-rollback last_exported_seq coverage +
# audit-ring write path land and TASK-18 un-gates. Never enable in production.
agent-backup-export-preview = ["agent-gateway", "dep:ml-kem"]
# TASK-23: deviceless UDS 0x40 contract-test server (twod-hsm-agent-contract-server) — installs a
# reference keystore (PUBLIC test keys) + serves the agent protocol over AF_UNIX WITHOUT SNP/anti-rollback,
# so downstream 2d (Elixir/macOS) can live-contract-test. Test/dev-only; release-banned (see lib.rs).
agent-contract-server = ["agent-gateway"]
# Reference relying-party SNP attestation verifier (TASK-1 AC#3/#12). NOT part of the enclave
# signing path — off by default so it is not compiled into the production enclave binary.
snp-verify = []
# ML-DSA-65 crypto (sealed-key provisioning). Does not embed a secret key by itself.
ml-dsa-65 = [
    "dep:pqcrypto-mldsa",
    "dep:pqcrypto-traits",
    "dep:zeroize",
    "dep:chacha20poly1305",
    "dep:getrandom",
]
# Offline seal CLI / provisioning workstation only — not for enclave deploy builds.
pq-seal-provisioning = ["ml-dsa-65"]
# Staging/CI: reference v1 seal root (not for production deployment).
reference-seal-v1-root = ["ml-dsa-65"]
# Lab/integration: load 32-byte root from `TWOD_HSM_PQ_SEAL_V1_ROOT_FILE` at boot (debug builds only).
platform-provisioning-from-file = ["ml-dsa-65"]
# Lab prod guest: install sealed blob from `TWOD_HSM_PQ_SEALED_SIGNER_FILE` after platform root (debug only).
lab-pq-seal-from-file = ["ml-dsa-65"]
# Lab/integration AGENT profile (TASK-7.7 5b-2d): source the sealed agent keystore (pq-agent-keystore-v1)
# from `TWOD_HSM_AGENT_SEALED_KEYSTORE_FILE` + an agent file provisioning root at boot. Base is
# `agent-gateway` (NOT ml-dsa-65 — the role-isolation-exclusive producer feature). Debug/integration builds
# ONLY — release-banned by a compile_error in lib.rs (mirrors lab-pq-seal-from-file). The production
# host-vsock install/restore source is a deferred slice.
lab-agent-keystore-from-file = ["agent-gateway"]
# Lab 5b-2c-iii SNP live-smoke surface (TASK-7.7): the TEST-KEYS-ONLY minted smoke keystore fixture,
# the lab anchor stub and the host-side 0x40 smoke-client cores. Debug/lab HOST tooling only —
# release-banned by a compile_error in lib.rs (mirrors lab-quote-smoke). Opens NO serve surface and
# is NEVER a guest-bin feature (the guest runs the real twod-hsm-agent-gateway bin).
lab-agent-smoke = ["agent-gateway"]
# Public NIST test-vector keypair — `cargo test` only (see vsock spec §2.1).
reference-test-key = ["ml-dsa-65", "reference-seal-v1-root", "pq-seal-provisioning"]
# (4c) in-guest quote smoke surface — lab/debug images only, release-banned in lib.rs; opens NO
# serve surface; NOT the 5b-2c bin. Bare marker (NO deps): it only widens cfg gates on items whose
# real dependencies come from agent-gateway + vsock-transport.
lab-quote-smoke = []
# Mock 64-byte PQ + reference Ed25519 attestation keys for local dev (see vsock spec §2.1).
# Mutually exclusive with ml-dsa-65 (compile_error in lib.rs).
test-support = ["dep:hex"]
# Staging/CI enclave profile: real ML-DSA-65 + reference seal (mutually exclusive with test-support via ml-dsa-65).
staging-host = [
    "ml-dsa-65",
    "pq-seal-provisioning",
    "reference-seal-v1-root",
    "reference-test-key",
    "dep:hex",
]
# Enables mock PQ signing in the ticket_signing_demo example only (pq_signing_ready stays false).
demo-mock-sign = ["test-support"]
# AF_VSOCK transport (Linux). Staging binary pairs with staging-host.
vsock-transport = ["dep:vsock", "dep:nix"]
staging-vsock = ["staging-host", "vsock-transport"]
# Production AF_VSOCK server (release only; no reference seal / staging keys).
production-vsock = ["ml-dsa-65", "vsock-transport"]
# Lab prod guest (debug build): file-based platform root + sealed signer install.
lab-production-vsock = [
    "production-vsock",
    "platform-provisioning-from-file",
    "lab-pq-seal-from-file",
]
enforce-forge-crosscheck = []
#   When enabled, the automated cross-check tests (that verify
#   `compute_canonical_ticket_hash` against the Solidity `abi.encode` + keccak256
#   via `CanonicalTicketHash.s.sol`) will HARD-FAIL instead of gracefully skipping
#   if forge or the script is unavailable.
#
#   Intended for CI gates:
#     cargo test --features enforce-forge-crosscheck
#
#   By default (without the feature) the tests remain CI-friendly and skip with
#   a loud warning. This preserves the "live contract" verification without
#   breaking developer machines that lack Foundry.
#
# Add "std" if we need std in the future (enclave may be no_std later)

[[bin]]
name = "enclave-stdio-bridge"
path = "src/bin/enclave_stdio_bridge.rs"

[[bin]]
name = "enclave-stdio-session"
path = "src/bin/enclave_stdio_session.rs"
required-features = ["test-support"]

[[bin]]
name = "enclave-uds-server"
path = "src/bin/enclave_uds_server.rs"
required-features = ["test-support"]

[[bin]]
name = "enclave-uds-staging"
path = "src/bin/enclave_uds_staging.rs"
required-features = ["staging-host"]

[[bin]]
name = "enclave-vsock-staging"
path = "src/bin/enclave_vsock_staging.rs"
required-features = ["staging-vsock"]

[[bin]]
name = "enclave-vsock"
path = "src/bin/enclave_vsock.rs"
required-features = ["production-vsock"]

# (4c) in-guest quote smoke (TASK-7.7 5b-2b-ii (d-ii)/4c). Feature SUPERSET of the §8 5b-2c
# manifest pin (agent-gateway + vsock-transport) plus the lab-only marker. MUST NOT name
# production-vsock/staging-vsock: both pull ml-dsa-65 → the role-isolation compile_error (lib.rs).
[[bin]]
name = "twod-hsm-quote-smoke"
path = "src/bin/twod_hsm_quote_smoke.rs"
required-features = ["agent-gateway", "vsock-transport", "lab-quote-smoke"]

# (b) host-relay daemon (TASK-7.7 5b-2b-ii(b)). The GENUINE intersection: agent-gateway ∩
# vsock-transport — NOT lab-quote-smoke (the relay carries no quote/smoke surface), NOT
# production-vsock/staging-vsock (both pull ml-dsa-65 → the role-isolation compile_error in lib.rs, so
# the relay's features can't accidentally pull the producer role).
[[bin]]
name = "twod-hsm-host-anchor-relay"
path = "src/bin/host_anchor_relay.rs"
required-features = ["agent-gateway", "vsock-transport"]

# TASK-7.7 5b-2c: the agent-gateway AF_VSOCK serve bin (anti-rollback profile). EXACTLY
# [agent-gateway, vsock-transport] — NOT production-vsock/staging-vsock (would pull ml-dsa-65 → the
# role-isolation compile_error) and NOT lab-quote-smoke (release-banned). A LAB boot additionally needs
# lab-agent-keystore-from-file (the only wired keystore source today); the production attested host-vsock
# source is a deferred slice.
[[bin]]
name = "twod-hsm-agent-gateway"
path = "src/bin/agent_gateway_vsock.rs"
required-features = ["agent-gateway", "vsock-transport"]

# 5b-2c-iii lab anchor stub (TASK-7.7). TCP-only host tooling — deliberately NO vsock-transport
# (darwin-buildable; the relay is the vsock side). TEST KEYS ONLY; lab-agent-smoke is release-banned.
[[bin]]
name = "twod-hsm-lab-anchor"
path = "src/bin/twod_hsm_lab_anchor.rs"
required-features = ["agent-gateway", "lab-agent-smoke"]

# 5b-2c-iii host-side 0x40 smoke client (TASK-7.7). Dials the guest agent serve port over AF_VSOCK
# (linux-only at runtime; non-linux main exits 2). NOT production-vsock/staging-vsock (role isolation).
[[bin]]
name = "twod-hsm-agent-smoke-client"
path = "src/bin/twod_hsm_agent_smoke_client.rs"
required-features = ["agent-gateway", "vsock-transport", "lab-agent-smoke"]

# 6-7b host-side WRITE-PATH smoke client (TASK-7.7). Drives a real signed GENERATE_KEYS over AF_VSOCK
# (linux-only at runtime; non-linux main exits 2). ADDS agent-keygen-exec-preview to the read-client's
# feature set — that gate is what makes the guest actually execute GENERATE_KEYS (seal→commit→swap→emit).
[[bin]]
name = "twod-hsm-agent-keygen-smoke-client"
path = "src/bin/twod_hsm_agent_keygen_smoke_client.rs"
required-features = ["agent-gateway", "vsock-transport", "lab-agent-smoke", "agent-keygen-exec-preview"]

# TASK-15 host-side combined FAUCET write-path smoke client. Drives mint-treasury → set_limits →
# refill_budget → dispense → stranger-reject over AF_VSOCK (linux-only; non-linux main exits 2). Needs
# ALL THREE preview gates (listed keygen-first to document the logical dependency: mint, then configure,
# then dispense) — the guest must execute GENERATE_KEYS + CONFIGURE_TREASURY + SIGN_FAUCET_DISPENSE.
[[bin]]
name = "twod-hsm-agent-faucet-smoke-client"
path = "src/bin/twod_hsm_agent_faucet_smoke_client.rs"
required-features = ["agent-gateway", "vsock-transport", "lab-agent-smoke", "agent-keygen-exec-preview", "agent-configure-treasury-preview", "agent-sign-faucet-preview"]

# TASK-23: deviceless cross-platform 0x40 contract-test server over AF_UNIX (TEST/DEV ONLY; the
# agent-contract-server feature is release-banned in lib.rs). PUBLIC_IDENTITY needs no preview; add the
# agent-*-preview features to reach the signing/capability/configure contract lanes.
[[bin]]
name = "twod-hsm-agent-contract-server"
path = "src/bin/agent_contract_server.rs"
required-features = ["agent-gateway", "agent-contract-server"]

# lab-production-vsock satisfies production-vsock via feature unification when both enabled

[[example]]
name = "ticket_signing_demo"
required-features = ["test-support", "demo-mock-sign"]

[[example]]
name = "generate_lab_prod_sealed"
required-features = ["pq-seal-provisioning", "ml-dsa-65"]

[[example]]
name = "dump_reference_attestation_vk"
required-features = ["test-support"]

[[example]]
name = "bench_mldsa65"
required-features = ["ml-dsa-65", "pq-seal-provisioning"]
